--- a/Workflow-CI/.github/workflows/ci.yml
+++ b/Workflow-CI/.github/workflows/ci.yml
@@ -1,28 +1,62 @@
-name: MLflow CI Zara Project
+name: CI/CD MLflow
 
 on:
   push:
-    paths:
-      - MLProject/**
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+env:
+  CSV_URL: "MLProject/Workflow-CI/dataset_preprocessing/zara_ready.csv"
+  TARGET_VAR: "Sales Volume"
 
 jobs:
-  train-model:
+  build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
 
-      - name: Set up Python
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: "3.9"
 
-      - name: Install Conda & MLflow
+      - name: Check Env
+        run: |
+          echo $CSV_URL
+
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install mlflow scikit-learn pandas
 
-      - name: Run MLflow Project
+      - name: Run mlflow project
         run: |
-          cd MLProject
-          mlflow run . -P data_path=Workflow-CI/dataset_preprocessing/zara_ready.csv
+          mlflow run MLProject --env-manager=local
+
+      - name: Get latest MLflow run_id
+        run: |
+          RUN_ID=$(ls -td mlruns/0/*/ | head -n 1 | cut -d'/' -f3)
+          echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
+          echo "Latest run_id: $RUN_ID"
+
+      - name: Build Docker Model
+        run: |
+          mlflow models build-docker --model-uri "runs:/$RUN_ID/model" --name "zara_model"
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Tag Docker Image
+        run: |
+          docker tag zara_model ${{ secrets.DOCKER_HUB_USERNAME }}/zara_model:latest
+
+      - name: Push Docker Image
+        run: |
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/zara_model:latest
