--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Build Docker Model
         run: |
-          mlflow models build-docker --model-uri "runs:/$RUN_ID/model" --name "zara_model"
+          mlflow models build-docker --model-uri "runs:/${{ env.RUN_ID }}/model" --name "zara_model"
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
